--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -33,7 +33,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}">
-                                        BRAND GOES HERE
+                                        {{ result.id }}
                                     </a>
                                 </h4>
                             </div>
@@ -59,8 +59,9 @@
 
             <!-- tab 2 -->
             <div role="tabpanel" class="tab-pane" id="events">
-                <p>PLACEHOLDER TODO</p>
 
+                {% for result in enforcements %}
+                <p>{{ result.receivedate }}</p>
                 <table class="table table-striped table-bordered">
                     <caption>
                         Reporting Sources
@@ -68,11 +69,11 @@
                     <tbody>
                         <tr>
                             <td>Safety Report</td>
-                            <td>['safety_report']</td>
+                            <td>{{ result.safetyreportid }}</td>
                         </tr>
                         <tr>
-                            <td>Second Field</td>
-                            <td>['second value']</td>
+                            <td>Safety Report Version</td>
+                            <td>{{ result.safetyreportversion }}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -106,6 +107,7 @@
                         </tr>
                     </tbody>
                 </table>
+                {% endfor %}
             </div>
 
             <!-- tab 3 -->
