--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -26,13 +26,13 @@
             <!-- tab 1 -->
             <div role="tabpanel" class="tab-pane active" id="labels">
                 <!-- accordion panel groups -->
-                <div class="panel-group">
+                <div class="panel-group" aria-multiselectable="true">
                     {% for result in labels %}
 
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}">
+                                    <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
                                         {{ result.id }}
                                     </a>
                                 </h4>
