--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -33,7 +33,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
-                                        {{ result.id }}
+                                        Set ID: {{ result.id }}
                                     </a>
                                 </h4>
                             </div>
