--- a/code/templates/core/landing_drug_labels.html
+++ b/code/templates/core/landing_drug_labels.html
@@ -9,7 +9,8 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h3>Select a drug below for additional information</h3>
+            <h3>Drug Names</h3>
+            <p>Select a drug from the list to view current drug-related information</p>
         </div>
     </div>
 
@@ -17,10 +18,14 @@
         <div class="col-xs-12">
            <div class="panel">
                 <div class="panel-body">
-                    {% for term in terms %}
-                        <a href="{% url 'search_labels' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }} <strong>({{ term.count }})</strong></a>
-                        <br/>
-                    {% endfor %}
+                    <div class="list-group">
+                        <a href="#" class="list-group-item active">Drug Name (generic/brand)</a>
+                        {% for term in terms %}
+                            <a href="{% url 'search_labels' %}?q={{ term.term|replace_spaces|urlencode }}" class="list-group-item">{{ term.term }}
+                                <span class="badge">{{ term.count }}</span>
+                            </a>
+                        {% endfor %}
+                    </div>
                 </div>
            </div>
         </div>
