--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -29,12 +29,11 @@
                 <!-- accordion panel groups -->
                 <div class="panel-group" aria-multiselectable="true">
                     {% for result in labels %}
-
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
-                                        {{ result.openfda.brand_name.0 }}: {{ result.id }}
+                                        {{ result.brand_name.0 }}  (id: {{ result.id }})
                                     </a>
                                 </h4>
                             </div>
@@ -47,13 +46,13 @@
                                             </div>
                                             <div class="col-sm-9 col-xs-12 cell">
                                                 <div class="text">
-                                                            {% if value|is_list %}
-                                                            {% for val in value %}
-                                                            {{ val }}
-                                                            {% endfor %}
-                                                            {% else %}
-                                                            {{ value }}
-                                                            {% endif %}
+                                                  {% if value|is_list %}
+                                                    {% for val in value %}
+                                                      {{ val|default_if_none:"N/A" }}<br />
+                                                    {% endfor %}
+                                                  {% else %}
+                                                    {{ value|default_if_none:"N/A" }}
+                                                  {% endif %}
                                                 </div>
                                                 <span class="more">More...</span>
                                                 <span class="less" style="display:none;">Less...</span>
@@ -78,7 +77,7 @@
                     <div class="panel-heading">
                       <h4 class="panel-title">
                          <a role="button" data-toggle="collapse" href="#tab2_panel{{ forloop.counter }}" aria-expanded="false">
-                           Safety Report Id: {{ result.safetyreportid  }} (received: {{ result.receivedate }})
+                           Safety Report Id: {{ result.safety_data.safety_report }} (received: {{ result.safety_data.receive_date }})
                          </a>
                       </h4>
                     </div>
@@ -88,14 +87,19 @@
                       <table class="table table-striped table-bordered">
                         <caption>Reporting Sources</caption>
                         <tbody>
+                          {% for key, value in result.safety_data.items %}
                           <tr>
-                            <td>Safety Report</td>
-                            <td>{{ result.safetyreportid }}</td>
+                            <td>{{ key|replace_underscores }}</td>
+                            <td>{% if value|is_list %}
+                                  {% for val in value %}
+                                    {{ val|default_if_none:"N/A" }}<br />
+                                  {% endfor %}
+                                {% else %}
+                                  {{ value|default_if_none:"N/A" }}
+                                {% endif %}
+                            </td>
                           </tr>
-                          <tr>
-                            <td>Safety Report Version</td>
-                            <td>{{ result.safetyreportversion }}</td>
-                          </tr>
+                          {% endfor %}
                       </tbody>
                     </table>
                     <table class="table table-striped table-bordered">
@@ -103,14 +107,19 @@
                         Patient Data
                       </caption>
                       <tbody>
-                        <tr>
-                          <td>Patient Report</td>
-                          <td>['patient']</td>
-                        </tr>
-                        <tr>
-                          <td>Second Field</td>
-                          <td>['second value']</td>
-                        </tr>
+                          {% for key, value in result.patient_data.items %}
+                          <tr>
+                            <td>{{ key|replace_underscores }}</td>
+                            <td>{% if value|is_list %}
+                                  {% for val in value %}
+                                    {{ val|default_if_none:"N/A" }}<br />
+                                  {% endfor %}
+                                {% else %}
+                                  {{ value|default_if_none:"N/A" }}
+                                {% endif %}
+                            </td>
+                          </tr>
+                          {% endfor %}
                       </tbody>
                     </table>
                     <table class="table table-striped table-bordered">
@@ -118,14 +127,19 @@
                         Drug Data
                       </caption>
                       <tbody>
-                        <tr>
-                          <td>Drug Report</td>
-                          <td>['patient.drug']</td>
-                        </tr>
-                        <tr>
-                          <td>Second Field</td>
-                          <td>['second value']</td>
-                        </tr>
+                          {% for key, value in result.label_data.items %}
+                          <tr>
+                            <td>{{ key|replace_underscores }}</td>
+                            <td>{% if value|is_list %}
+                                  {% for val in value %}
+                                    {{ val|default_if_none:"N/A" }}<br />
+                                  {% endfor %}
+                                {% else %}
+                                  {{ value|default_if_none:"N/A" }}
+                                {% endif %}
+                            </td>
+                          </tr>
+                          {% endfor %}
                       </tbody>
                     </table>
                   </div>
@@ -144,7 +158,7 @@
                     <div class="panel-heading">
                       <h4 class="panel-title">
                          <a role="button" data-toggle="collapse" href="#tab3_panel{{ forloop.counter }}" aria-expanded="false">
-                           Reason for recall: {{ result.reason_for_recall }}
+                           Recall Number: {{ result.recall_number }} [{{ result.report_date }}: {{ result.city }}, {{ result.state }}]
                          </a>
                       </h4>
                     </div>
@@ -155,16 +169,16 @@
                         <tbody>
                         {% for key, value in result.items %}
                           <tr>
-                             <td>{{ key }}</td>
+                             <td>{{ key|replace_underscores }}</td>
                              <td class="cell">
                                <div class="text">
-                               {% if value|is_list %}
-                               {% for val in value %}
-                               {{ val }}
-                               {% endfor %}
-                               {% else %}
-                               {{ value }}
-                               {% endif %}
+                                  {% if value|is_list %}
+                                    {% for val in value %}
+                                      {{ val|default_if_none:"N/A" }}<br />
+                                    {% endfor %}
+                                  {% else %}
+                                    {{ value|default_if_none:"N/A" }}
+                                  {% endif %}
                                </div>
                                <span class="more">More...</span>
                                <span class="less" style="display:none;">Less...</span>
