--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -8,22 +8,14 @@
 <title>FDA Drug Monitor - Drug Details</title>
 {% endblock %}
 
-{% block image %}
-    <img src="{% static "images/drugs-short.png" %}" class="img-responsive center-block" alt="drug labels banner image">
-{% endblock %}
-
-{% block search %}
-    {% include 'core/searchbar.html' with search_category='labels'%}
-{% endblock %}
-
 {% block text %}
     <div class="row">
         <div class="col-xs-12">
-            <h1>Drug Details
+            <h1 class="page-title">Drug Details
                 <br/>
                 <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
-            <p>
+            <p class="page-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
             pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
             consequat dictum eget in diam.
@@ -34,34 +26,29 @@
 
 {% block details %}
 <!-- Nav tabs -->
-    <div class="panel">
-        <div class="panel-body">
-            <ul class="nav nav-tabs fda-nav-tab" role="tablist">
-                <li role="presentation" class="active"><a href="#labels" aria-controls="labels" role="tab" data-toggle="tab">Labels</a></li>
-                <li role="presentation"><a href="#events" aria-controls="events" role="tab" data-toggle="tab">Adverse Events</a></li>
-                <li role="presentation"><a href="#enforcements" aria-controls="enforcements" role="tab" data-toggle="tab">Enforcement Reports</a></li>
-            </ul>
+    <div id="fda-tabs-interface" class="fda-tabs-interface">
+        <ul>
+            <li><a href="#labels">Labels</a></li>
+            <li><a href="#events">Adverse Events</a></li>
+            <li><a href="#enforcements">Enforcement Reports</a></li>
+        </ul>
+        <!-- tab 1 -->
+        <div class="fda-accordion-interface" id="labels">
+            <!-- accordion panel groups -->
+            {% include 'core/tab_labels.html' with prefix='labels' %}
+        </div><!-- end tab 1 -->
 
-            <div class="tab-content">
-                <!-- tab 1 -->
-                <div role="tabpanel" class="tab-pane active fda-table-accordion" id="labels">
-                    <!-- accordion panel groups -->
-                    {% include 'core/tab_labels.html' with prefix='labels' %}
-                </div><!-- end tab 1 -->
+        <!-- tab 2 -->
+        <div class="fda-accordion-interface" id="events">
+            <!-- accordion panel groups -->
+           {% include 'core/tab_events.html' with prefix='events'%}
+        </div><!-- end tab 2 -->
 
-                <!-- tab 2 -->
-                <div role="tabpanel" class="tab-pane fda-table-accordion" id="events">
-                    <!-- accordion panel groups -->
-                   {% include 'core/tab_events.html' with prefix='events'%}
-                </div><!-- end tab 2 -->
-
-                <!-- tab 3 -->
-                <div role="tabpanel" class="tab-pane fda-table-accordion" id="enforcements">
-                    <!-- accordion panel groups -->
-                   {% include 'core/tab_enforcements.html' with prefix='enforce'%}
-                </div><!-- end tab 3 -->
-            </div> <!-- end tab content -->
-        </div> <!-- end panel-body -->
+        <!-- tab 3 -->
+        <div class="fda-accordion-interface" id="enforcements">
+            <!-- accordion panel groups -->
+           {% include 'core/tab_enforcements.html' with prefix='enforce'%}
+        </div><!-- end tab 3 -->
     </div> <!-- end panel -->
 {% endblock %}
 
