--- a/code/templates/core/details_drug_labels.html
+++ b/code/templates/core/details_drug_labels.html
@@ -18,9 +18,9 @@
         <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
     </h1>
     <p class="page-description">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
-    pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
-    consequat dictum eget in diam.
+        <strong>Definition:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper,
+        commodo nunc consectetur, pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat.
+        Donec quis quam vel massa consequat dictum eget in diam.
     </p>
 {% endblock %}
 
