--- a/code/templates/core/landing_drug_labels.html
+++ b/code/templates/core/landing_drug_labels.html
@@ -15,7 +15,7 @@
 {% block text %}
     <h1 class="page-title">Drug Names</h1>
     <p class="page-description">Select a drug from the list below or enter a drug name into the search above
-        to view current related information</p>
+        to view current related information.  Only the top 100 drug names are shown here.</p>
 {% endblock %}
 
 {% block details %}
